[gd_scene load_steps=2 format=3 uid="uid://dfpc66x1a3c6w"]

[ext_resource type="Script" path="res://addons/resource_wrangler/src/nodes/choosers/chooser_node.gd" id="1_ctbkc"]

[node name="ChooserThing" type="GraphNode"]
custom_minimum_size = Vector2(512, 0)
offset_right = 156.0
offset_bottom = 97.0
mouse_force_pass_scroll_events = false
title = "Resources (ESC closes)"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_ctbkc")

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false

[node name="filter" type="LineEdit" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
text = "filter"
placeholder_text = "filter"
context_menu_enabled = false
clear_button_enabled = true
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false

[node name="resources" type="ItemList" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_force_pass_scroll_events = false
allow_search = false
same_column_width = true
fixed_icon_size = Vector2i(16, 16)

[node name="HSeparator" type="HSeparator" parent="vb"]
layout_mode = 2

[connection signal="gui_input" from="vb/filter" to="." method="_on_filter_gui_input"]
[connection signal="text_changed" from="vb/filter" to="." method="_on_filter_text_changed"]
[connection signal="item_activated" from="vb/resources" to="." method="_on_list_item_activated"]
